<resources>
    <string name="app_name">MessageApp</string>

    <string name="app_logo">LOGO</string>

    <!-- Log in Activity -->

    <!-- Text Log In-->
    <string name="text_login">Faça o seu Login</string>

    <!-- Text Input E-mail -->
    <string name="text_input_email">Digite seu e-mail</string>
    <!-- Text Input Password -->
    <string name="text_input_password">Digite sua senha</string>

    <!-- Tex Sign Up -->
    <string name="text_not_have_account">Ainda não tem uma conta?</string>
    <string name="text_login_sign_up">Cadastre-se</string>

    <!-- Button Log in -->
    <string name="btn_login">Log in</string>


    <!-- Sign Up Activity -->

    <!-- Text Sign Up-->
    <string name="text_sign_up">Faça o seu Cadastro</string>

    <!-- Text Input Name -->
    <string name="text_sign_up_input_name">Digite seu nome</string>
    <!-- Text Input E-mail -->
    <string name="text_sign_up_input_email">Digite seu e-mail</string>
    <!-- Text Input Password -->
    <string name="text_sign_up_input_password">Digite sua senha</string>

    <!-- Button Sign Up -->
    <string name="btn_sign_up">Cadastre-se</string>
    <string name="welcome">Bem vindo</string>

    <!-- Toolbar Menu Items -->
    <string name="profile">Perfil</string>
    <string name="logout">Sair</string>


    <!-- Savings -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_button">Botão para editar foto de perfil</string>
    <string name="save_button">Salvar</string>
    <string name="edit_text_your_name">Digite seu nome</string>
    <string name="profile_name">Nome:</string>
    <string name="send_button_description">Botão de Enviar</string>
    <string name="mussum_ipsum">Mussum Ipsum, cacilds vidis litro abertis. Casamentiss faiz malandris se pirulitá. Posuere libero varius. Nullam a nisl ut ante blandit hendrerit.</string>


</resources>